# digit-recognition

./: .gitignore  README.md  main.py  predict.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py  train.py
assets/fonts/: README.md
assets/icons/: README.md
config/: default.json  gui.json  training.json
data/augmented/: README.md
data/custom/: README.md
data/mnist/: README.md
docs/api/: README.md
docs/guides/: README.md
docs/images/: README.md
models/: README.md
models/checkpoints/: README.md
plan/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  GUI_DESIGN.md  MATHEMATICAL_FOUNDATION.md  NEURAL_NETWORK_DESIGN.md  PERFORMANCE_BENCHMARKS.md  PLANNING_SUMMARY.md  PRD.md  PREPROCESSING_PIPELINE.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  TESTING_STRATEGY.md  TRAINING_STRATEGY.md  USER_GUIDE.md  USER_PERSONA.md
scripts/: download_mnist.py  evaluate_model.py  train_mnist.py  train_model.py
src/: __init__.py  main.py
src/core/: __init__.py  activations.py  initializers.py  layers.py  losses.py  metrics.py  network.py  optimizers.py  serialization.py
src/gui/: __init__.py  app.py  drawing_canvas.py  main_window.py
src/preprocessing/: __init__.py  image_preprocessor.py  mnist_loader.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  math_utils.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_layers.py  test_losses.py  test_math_utils.py  test_metrics.py  test_network.py  test_optimizers.py  test_preprocessing.py  test_serialization.py  test_trainer.py
